[gd_scene load_steps=18 format=2]

[ext_resource path="res://fonts/knight-vision-font/KnightVision-p7Ezy.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sprites/controls/icons8-left-arrow-key-64.png" type="Texture" id=2]
[ext_resource path="res://scripts/SkillSelectionUI/SelectionLabel.gd" type="Script" id=3]
[ext_resource path="res://sprites/controls/icons8-left-arrow-key-64_pressed.png" type="Texture" id=4]
[ext_resource path="res://scripts/SkillSelectionUI/SkillSelection.gd" type="Script" id=5]
[ext_resource path="res://scenes/PlayerSkillSlot.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/skills/SkillFrame.png" type="Texture" id=7]
[ext_resource path="res://sprites/controls/icons8-space-key-100.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=9]
size = 101
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=5]
action = "ui_left"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "ui_right"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 69
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 54
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxLine" id=10]
content_margin_left = 9.0
content_margin_right = 0.0
content_margin_top = 37.0
content_margin_bottom = 0.0
color = Color( 0.811765, 0.521569, 0.937255, 1 )
thickness = 10

[sub_resource type="DynamicFont" id=11]
size = 26
font_data = ExtResource( 1 )

[node name="SelectionUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="SelectionLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -327.0
margin_top = 43.0
margin_right = 973.0
margin_bottom = 150.0
rect_min_size = Vector2( 1300, 100 )
rect_scale = Vector2( 0.483168, 0.483168 )
custom_colors/default_color = Color( 0.992157, 0.94902, 0.94902, 1 )
custom_fonts/bold_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[center][b]Choosing only 1 skill"
text = "Choosing only 1 skill"
fit_content_height = true
scroll_active = false
custom_effects = [ null ]
script = ExtResource( 3 )

[node name="SkillPoolContainer" type="HBoxContainer" parent="."]
margin_left = 54.0
margin_top = 146.0
margin_right = 258.0
margin_bottom = 210.0
rect_scale = Vector2( 2.19168, 2.19168 )

[node name="Backward" type="TextureButton" parent="SkillPoolContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 283.801, 28.7451 )
shortcut = SubResource( 6 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )

[node name="SkillFrame" type="TextureRect" parent="SkillPoolContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 7 )

[node name="SkillSelect" type="TextureRect" parent="SkillPoolContainer/SkillFrame"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.65356
margin_top = 9.5817
margin_right = 8.65356
margin_bottom = 9.5817
rect_scale = Vector2( 0.748508, 0.701081 )

[node name="Forward" type="TextureButton" parent="SkillPoolContainer"]
margin_left = 136.0
margin_right = 200.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32.8203, 30.5702 )
shortcut = SubResource( 8 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 4 )
flip_h = true

[node name="SkillDetail" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 547.0
margin_top = 106.0
margin_right = 547.0
margin_bottom = 106.0
rect_scale = Vector2( 0.355968, 0.355968 )
custom_constants/separation = 30
alignment = 1

[node name="SkillTitle" type="RichTextLabel" parent="SkillDetail"]
margin_top = 87.0
margin_right = 1024.0
margin_bottom = 161.0
custom_fonts/bold_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][b]Skill Name"
text = "Skill Name"
fit_content_height = true

[node name="SkillDescp" type="RichTextLabel" parent="SkillDetail"]
margin_top = 191.0
margin_right = 1024.0
margin_bottom = 512.0
rect_min_size = Vector2( 0, 321 )
custom_fonts/normal_font = SubResource( 4 )
custom_styles/normal = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "dfdsfdsfsfdsfdffdjfksdhfsdjfjsdfkdshfkjsdfhkdsjfhkdjsfhkdfjhdshdsjfjh"
text = "dfdsfdsfsfdsfdffdjfksdhfsdjfjsdfkdshfkjsdfhkdsjfhkdjsfhkdfjhdshdsjfjh"
fit_content_height = true

[node name="SkillSlot" parent="." instance=ExtResource( 6 )]
margin_left = -148.0
margin_top = 154.0
margin_right = -148.0
margin_bottom = 154.0
rect_scale = Vector2( 0.871088, 0.871088 )

[node name="Start" type="TextureButton" parent="."]
margin_left = 558.0
margin_top = 289.0
margin_right = 950.0
margin_bottom = 505.0
rect_scale = Vector2( 0.990385, 1.13913 )
texture_normal = ExtResource( 8 )
expand = true

[node name="Keyinfo" type="RichTextLabel" parent="Start"]
margin_left = 16.0
margin_top = 74.0
margin_right = 366.0
margin_bottom = 137.0
rect_min_size = Vector2( 350, 63 )
custom_fonts/bold_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "[center][b]Press SPACE to continue"
text = "Press SPACE to continue"

[node name="BG" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="changeskill" from="." to="SkillSlot" method="_on_SelectionUI_changeskill"]
